Header overlapped and padding issue resolved.

--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -17,6 +17,12 @@
       top: 0;
       z-index: 2;
     }
+
+    &-static {
+      position: relative;
+      z-index: 2;
+      pointer-events: auto;
+    }
   }
 }
 
